--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,20 @@
+node-errno (1.0.0-3) unstable; urgency=medium
+
+  [ Debian Janitor ]
+  * Apply multi-arch hints. + node-errno: Add Multi-Arch: foreign.
+
+ -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 21 Nov 2022 14:09:26 +0000
+
+node-errno (1.0.0-2) unstable; urgency=medium
+
+  * Team upload
+  * Fix GitHub tags regex
+  * Update standards version to 4.6.0, no changes needed.
+  * Fix filenamemangle
+  * Update nodejs dependency to nodejs:any
+
+ -- Yadd <yadd@debian.org>  Wed, 29 Dec 2021 19:00:35 +0100
+
 node-errno (1.0.0-1) unstable; urgency=medium
 
   * Team upload
